[package]
name = "hello2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[[bin]]
name = "client2"
path = "src/client2.rs"

[[bin]]
name = "main2"
path = "src/main2.rs"

[[bin]]
name = "main3"
path = "src/main3.rs"

[dependencies]
fltk = "^1.4"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
image = "0.25.1"
prost-reflect = "0.14.0"
prost-reflect-build = "0.14.0"
prost-reflect-derive = "0.14.0"
prost-build = "0.13.1"
once_cell = "1.19.0"
serde_json = "1.0.120"
anyhow = "1.0.86"
gui_reflect = {path ="gui_reflect"}
flex_test = {path ="flex_test"}
fltk-theme = "=0.1.4"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13.1"
prost-reflect-build = "0.14.0"
