[package]
name = "gui_reflect"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
prost-types = "0.13"
prost-reflect = "0.14.0"
prost-reflect-build = "0.14.0"
prost-reflect-derive = "0.14.0"
anyhow = "1.0.86"
fltk-calendar = "0.3"
fltk = "^1.4"
chrono = "0.4.38"
reflection = "0.1.3"
trees = "=0.2.1"
reflection_derive = "0.1.1"